# SOA-labs

./: .gitignore  Dockerfile  Dockerfile.aggregator  Dockerfile.client  README.md  aggregator.py  client.py  docker-compose-infra.yml  docker-compose.yaml  docker-compose.yml  monolothic.py  pyproject.toml  weather.proto  weather_pb2.py  weather_pb2.pyi  weather_pb2_grpc.py  weather_server_1.py
inventory-service/: pom.xml
inventory-service/src/main/java/com/lab/inventory/: InventoryServiceApplication.java
inventory-service/src/main/java/com/lab/inventory/config/: KafkaConsumerConfig.java  KafkaErrorHandler.java
inventory-service/src/main/java/com/lab/inventory/consumer/: OrderConsumer.java
inventory-service/src/main/java/com/lab/inventory/dto/: OrderEventDTO.java
inventory-service/src/main/java/com/lab/inventory/model/: InventoryItem.java
inventory-service/src/main/java/com/lab/inventory/repository/: InventoryRepository.java
inventory-service/src/main/resources/: application.yml
notification-service/: pom.xml
notification-service/src/main/java/com/lab/notification/: NotificationServiceApplication.java
notification-service/src/main/java/com/lab/notification/consumer/: OrderNotificationConsumer.java
notification-service/src/main/resources/: application.yml
order-service/: pom.xml
order-service/src/main/java/com/lab/order/: OrderServiceApplication.java
order-service/src/main/resources/: application.yml
rest/: app.py  models.py  schemas.py  service.py
soap/: app.py  service.py  test_the_soap_service.py
(+11 files in other folders)
