[project]
name = "lab_SOA_1"
version = "0.1.0"
description = ""
#license = { text = "MIT" }
readme = "readme.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "PyQt5",
    "sqlalchemy",
    "psycopg2-binary",
    "spyne",
    "lxml",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pytest",
    "debugpy>=1.8.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "black>=25.1.0",
]

